# waypipe

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  autoformat.sh  compile_wrapper.sh  cross_testing.sh  meson.build  meson_options.txt  minimal_build.sh  protogen.py  waypipe.scd
shaders/: Cargo.toml  build.rs  check.sh  nv12_img_to_rgb.glsl  rgb_to_nv12_img.glsl  rgb_to_yuv420_buf.glsl  yuv420_buf_to_rgb.glsl
shaders/src/: lib.rs
src/: bench.rs  client.c  compress.rs  damage.rs  dmabuf.c  dmabuf.h  dmabuf.rs  gbm.rs  handlers.c  kernel.rs  main.rs  mainloop.rs  meson.build  mirror.rs  platform.rs  read.rs  secctx.c  secctx.rs  shadow.c  stub.rs  test.rs  test_proto.rs  tracking.rs  util.rs  video.rs  wayland.rs  wayland_gen.rs  waypipe.c
tests/: proto.rs
waypipe-c/: bench.c  dmabuf.c  handlers.c  kernel.c  main.h  mainloop.c  meson.build  util.c  waypipe.c
waypipe-c/protocols/: function_list.txt  meson.build  sendgen.py
waypipe-c/test/: damage_merge.c  headless.py  meson.build  startup_failure.py  test_proto_hook.c
wrap-ffmpeg/: Cargo.toml  build.rs  wrapper.h
wrap-ffmpeg/src/: lib.rs
wrap-gbm/: Cargo.toml  build.rs
wrap-lz4/: Cargo.toml  build.rs  wrapper.h
wrap-zstd/: Cargo.toml  build.rs
wrap-zstd/src/: lib.rs
