[package]
name = "waypipe"
version = "0.9.2"
edition = "2021"

[profile.release]
debug = "full"
# Using split-debuginfo currently leaves much of the debug info in the executable
# so handle stripping with objcopy in the meson build
split-debuginfo = "off"
panic = "abort"
[profile.dev]
panic = "abort"

[features]
default = ["video", "dmabuf", "lz4", "zstd"]
video = ["dep:waypipe-ffmpeg-wrapper", "dep:waypipe-shaders", "dmabuf"]
dmabuf = ["dep:ash"]
lz4 = ["dep:waypipe-lz4-wrapper"]
zstd = ["dep:waypipe-zstd-wrapper"]

[dependencies]
getrandom = "0.2.15"
clap = { version = "4.5.21", features = [] }
log = { version = "0.4.22", features = ["std"] }
nix = { version = "0.29.0", features = ["fs", "poll", "uio", "socket", "process", "signal"] }
ash = { version = "0.38.0", optional = true }
waypipe-ffmpeg-wrapper = { path = "wrap-ffmpeg", optional = true}
waypipe-lz4-wrapper = { path = "wrap-lz4", optional = true}
waypipe-zstd-wrapper = { path = "wrap-zstd", optional = true}
waypipe-shaders= { path = "shaders", optional = true}
